# Simon-s-Character-Sheet

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  build_release.sh  config_template.rs  index.html  rustfmt.toml  style.css  test.sh
.github/workflows/: pr.yml  release.yml
_functions/: ClassSelection.js  Functions0.js  Functions1.js  Functions2.js  Functions3.js  FunctionsImport.js  FunctionsResources.js  FunctionsSpells.js  Startup.js
_variables/: Lists.js  ListsClasses.js  ListsCompanions.js  ListsCreatures.js  ListsFeats.js  ListsGear.js  ListsMagicItems.js  ListsRaces.js  ListsSpells.js
additional content syntax/: _common attributes.js  class (ClassList)_unfinished.js  companion template option (CompanionList).js  creature, wild shape option (CreatureList).js  feat (FeatsList).js  magic item (MagicItemsList).js  source_syntax.yaml  weapon (WeaponsList).js
additional content syntax/v12.999 syntax, if v13 not available/: Homebrew Syntax - ClassList.js  Homebrew Syntax - RaceList.js
additional content/3rd-party compendium pre-v13/: Kibbles Compendium of Craft and Creation (v1.1.3).js  Kibbles Compendium of Craft and Creation (v1.1.3).yaml  Tal'Dorei Campaign Setting (Critical Role).js
additional content/Classes/: Battlemage [Luke Arndt's work, transcribed by MPMB].js  Blood Hunter 2020 [Matthew Mercer's work, transcribed by Smashman & MPMB].js  Dragon Knight [Rain-Junkie's work, transcribed by MPMB].js  Elementalist [2CGaming's work, transcribed by MPMB].js  Warmage [MFoV, transcribed by MPMB].js  (+6 more)
additional content/Classes pre-v13/: Alchemist [DawnforgedCast's work, transcribed by PbFarmer] (incomplete).js  Blood Hunter [Matthew Mercer's work, transcribed by Darryl & MPMB].js  Cardcaster [EN World En5ider, transcribed by MPMB].js  Justiciar [Ross Leiser's work, transcribed by MPMB].js  Shadowcaster [lysian09's work, transcribed by MPMB].js  Shaman [Michael Wolf's work, transcribed by Derek, Fourleafclov, MPMB].js
content/: 0_SRD.yaml
js/: app_adapter.js  controller.js  dialog_manager.js  event_manager.js  utils.js
pages/: page_appearance_background.html  page_companion.html  page_features_equipment.html  page_notes.html  page_notes_feats.html  page_overflow.html  page_reference.html  page_spells.html  page_spells_more.html  page_stats.html  page_wildshape.html
src/: config.rs  lib.rs
(+46 files in other folders)
